# somequestion

./: .gitignore  _gen_cpp_basics_debug.ps1  problem_gap_analysis_2026-03-24.md  sync.bat  面经题目分类汇总.md
case/cpp_basics/class_inheritance/: CMakeLists.txt  README.md
case/cpp_basics/class_inheritance/q01_class_size/: CMakeLists.txt  main.cpp
case/cpp_basics/class_inheritance/q02_diamond_inheritance/: CMakeLists.txt  main.cpp
case/cpp_basics/class_inheritance/q03_struct_alignment_layout/: CMakeLists.txt  main.cpp
case/cpp_basics/class_inheritance/q04_overload_override_hide/: CMakeLists.txt  main.cpp
case/cpp_basics/class_inheritance/q05_static_member_init/: CMakeLists.txt  main.cpp
case/cpp_basics/class_inheritance/q06_struct_size_with_static_virtual/: CMakeLists.txt  main.cpp
case/cpp_basics/class_inheritance/q07_vtable_count_for_instances/: CMakeLists.txt  main.cpp
case/cpp_basics/class_inheritance/q08_multi_inheritance_problems/: CMakeLists.txt  main.cpp
case/cpp_basics/keywords_syntax/: CMakeLists.txt  README.md
case/cpp_basics/keywords_syntax/q01_const_usage/: CMakeLists.txt  main.cpp
case/cpp_basics/keywords_syntax/q02_static_keyword/: CMakeLists.txt  main.cpp
case/cpp_basics/keywords_syntax/q03_inline_vs_macro/: CMakeLists.txt  main.cpp
case/cpp_basics/keywords_syntax/q04_four_casts/: CMakeLists.txt  main.cpp
case/cpp_basics/keywords_syntax/q05_lambda_syntax/: CMakeLists.txt  main.cpp
case/cpp_basics/keywords_syntax/q06_final_override/: CMakeLists.txt  main.cpp
case/cpp_basics/keywords_syntax/q07_extern_keyword/: CMakeLists.txt  main.cpp
case/cpp_basics/keywords_syntax/q08_volatile_keyword/: CMakeLists.txt  main.cpp
case/cpp_basics/keywords_syntax/q09_force_inline/: CMakeLists.txt  main.cpp
case/cpp_basics/keywords_syntax/q10_template_vs_normal_compile/: CMakeLists.txt  main.cpp
case/cpp_basics/keywords_syntax/q11_raii/: CMakeLists.txt  main.cpp
case/cpp_basics/memory_and_pointer/: CMakeLists.txt  README.md
case/cpp_basics/memory_and_pointer/q04_memory_leak/: CMakeLists.txt  main.cpp
case/cpp_basics/memory_and_pointer/q05_dangling_pointer/: CMakeLists.txt  main.cpp
case/cpp_basics/memory_and_pointer/q06_const_pointer/: CMakeLists.txt  main.cpp
case/cpp_basics/memory_and_pointer/q07_shared_ptr_cycle/: CMakeLists.txt  main.cpp
case/cpp_basics/memory_and_pointer/q08_memory_alignment/: CMakeLists.txt  main.cpp
case/cpp_basics/memory_and_pointer/q09_malloc_syscall/: CMakeLists.txt  main.cpp
case/cpp_basics/memory_and_pointer/q10_placement_new/: CMakeLists.txt  main.cpp
case/cpp_basics/memory_and_pointer/q11_new_vs_make_shared/: CMakeLists.txt  main.cpp
case/cpp_basics/memory_and_pointer/q12_refcount_thread_safe/: CMakeLists.txt  main.cpp
case/cpp_basics/memory_and_pointer/q13_weak_ptr_principle/: CMakeLists.txt  main.cpp
case/cpp_basics/memory_and_pointer/q14_new_array_delete/: CMakeLists.txt  main.cpp
case/cpp_basics/memory_and_pointer/q1_new_malloc_delete_free/: CMakeLists.txt  main.cpp
case/cpp_basics/memory_and_pointer/q2_smart_pointers/: CMakeLists.txt  main.cpp
case/cpp_basics/memory_and_pointer/q3_pointer_vs_reference/: CMakeLists.txt  main.cpp
case/cpp_basics/move_semantics_rvalue/: CMakeLists.txt  README.md
case/cpp_basics/move_semantics_rvalue/q01_lvalue_rvalue/: CMakeLists.txt  main.cpp
case/cpp_basics/move_semantics_rvalue/q07_move_vs_rvo/: main.cpp  (+1 more)
case/cpp_basics/other_cpp_topics/: CMakeLists.txt  README.md
case/cpp_basics/stl_containers/: CMakeLists.txt  README.md
case/cpp_basics/virtual_polymorphism/: CMakeLists.txt  README.md
(+262 files in other folders)
