add_subdirectory(q01_const_usage)
add_subdirectory(q02_static_keyword)
add_subdirectory(q03_inline_vs_macro)
add_subdirectory(q04_four_casts)
add_subdirectory(q05_lambda_syntax)
add_subdirectory(q06_final_override)
add_subdirectory(q07_extern_keyword)
add_subdirectory(q08_volatile_keyword)
add_subdirectory(q09_force_inline)
add_subdirectory(q10_template_vs_normal_compile)
add_subdirectory(q11_raii)
