add_subdirectory(q1_new_malloc_delete_free)
add_subdirectory(q2_smart_pointers)
add_subdirectory(q3_pointer_vs_reference)
add_subdirectory(q04_memory_leak)
add_subdirectory(q05_dangling_pointer)
add_subdirectory(q06_const_pointer)
add_subdirectory(q07_shared_ptr_cycle)
add_subdirectory(q08_memory_alignment)
add_subdirectory(q09_malloc_syscall)
add_subdirectory(q10_placement_new)
add_subdirectory(q11_new_vs_make_shared)
add_subdirectory(q12_refcount_thread_safe)
add_subdirectory(q13_weak_ptr_principle)
add_subdirectory(q14_new_array_delete)
