add_subdirectory(q01_map_vs_unordered_map)
add_subdirectory(q02_vector_impl_growth)
add_subdirectory(q03_iterator_invalidation)
add_subdirectory(q04_emplace_back_vs_push_back)
add_subdirectory(q05_reserve_vs_resize)
add_subdirectory(q06_rb_tree_vs_avl)
add_subdirectory(q07_vector_shrink)
add_subdirectory(q08_hash_table_collision)
add_subdirectory(q09_container_complexity)
add_subdirectory(q10_vector_o1_erase)
add_subdirectory(q11_deque_impl)
add_subdirectory(q12_stl_hash_containers)
add_subdirectory(q13_list_vs_vector)
