add_subdirectory(q01_virtual_function_impl)
add_subdirectory(q02_polymorphism_static_dynamic)
add_subdirectory(q03_why_virtual_destructor)
add_subdirectory(q04_ctor_virtual)
add_subdirectory(q05_vtable_location)
add_subdirectory(q06_vtable_init_time)
add_subdirectory(q07_multiple_inheritance_vtable)
add_subdirectory(q08_static_virtual)
add_subdirectory(q09_virtual_call_in_ctor_dtor)
add_subdirectory(q10_non_virtual_candidates)
add_subdirectory(q11_base_without_virtual_dtor)
add_subdirectory(q12_inline_virtual)
add_subdirectory(q13_pure_virtual)
add_subdirectory(q14_virtual_large_project_issues)
